2025.10.18 Refactor & threads addition